# shaderpixel

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
assets/shaders/: art2d.vert  art3d.vert  cat.frag  cubemap.frag  cubemap.vert  mandelbox.frag  mandelbox.vert  mandelbrot.frag  mengersponge.frag  mountain.frag  shader.frag  shader.vert  solar.frag
src/: env_generator.rs  fs.rs  lib.rs  main.rs  math.rs  obj.rs  vulkan.rs
src/math/: angle.rs  matrix.rs  vector.rs
src/vulkan/: app.rs  buffer.rs  cmd.rs  context.rs  debug.rs  egui.rs  geometry.rs  pipeline.rs  shader.rs  structs.rs  swapchain.rs  vertex.rs
