[package]
name = "shaderpixel"
version = "0.1.0"
authors = ["Alex Thill"]
edition = "2021"
build = "build.rs"
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
glslang = "0.6"
log = "0.4"
notify-debouncer-full = "0.5.0"

ash = "0.38"
ash-window = "0.13"
egui = { version = "0.31", default-features = false }
egui-ash-renderer = { version = "0.8" }#, features = ["gpu-allocator"] }
egui-winit = "0.31"
#gpu-allocator = { version = "0.27", default-features = false, features = ["vulkan"] }
raw-window-handle = "0.6"
winit = "0.30"
